Added compatibility with Java 17 Icon changed